--- a/index.html
+++ b/index.html
@@ -6,86 +6,94 @@
     <title>Motores Company</title>
     <link rel="icon" type="image/png" href="images 100.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      
+    />
 </head>
 <body>
-<section>
-    <div class="gird-1">
-        <h3 class="gird-2">Autorepair<span class="gird-5">.</span></h3>
-        <div class="grid-container">
-            <h4 class="gird-3">
-                <img src="pngtree-vector-location-icon-png-image_515550.jpg" alt="Image is not Found" class="grid-image">Adress 
-               <p class="gird-4">721 New York NY</p>        
-            </h4>
-            <h4 class="gird-3">
-                <img src="pngtree-vector-location-icon-png-image_515550.jpg" alt="Image is not Found" class="grid-image">Call us
-                <p class="gird-4">(+01) 123 456 7890</p>
-            </h4>
+<section class="top-bar-wrapper">
+    <div class="top-bar-content">
+        <div>
+            <p class="top-bar-content-1st"><b>Autorepair</b><span style="color: #f79f24; font-size: 22px;">.</span></p>
         </div>
-    </div>
+    <div class="top-bar-info-wrapper">
+        <div class="top-bar-info">
+          <div class="info-icon-wrapper">
+            <i class="fa-solid fa-location-arrow info-icon"></i>
+          </div>
+          <div>
+            <p class="top-bar-info1">Address</p>
+            <p class="top-bar-info2">721 New York NY 10016</p>
+          </div>
+        </div>
+          <div class="top-bar-info">
+          <div class="info-icon-wrapper">
+            <i class="fa-solid fa-location-arrow info-icon"></i>
+          </div>
+
+          <div>
+            <p class="top-bar-info1">Call us</p>
+            <p class="top-bar-info2">(+01) 123 456 7890</p>
+          </div>
+        </div>
+
+            <!-- social media icons -->
+            <div class="top-bar-social-media">
+            <!-- facebook icon -->
+            <div class="social-icon-wrapper">
+                <i class="fab fa-facebook-f social-icon"></i>
+            </div>
+            <!-- twitter icon -->
+            <div class="social-icon-wrapper">
+                <i class="fa-brands fa-twitter social-icon"></i>
+            </div>
+            <!-- instagram icon -->
+            <div class="social-icon-wrapper">
+                <i class="fa-brands fa-instagram social-icon"></i>
+            </div>
+            <!-- dribble icon -->
+            <div class="social-icon-wrapper">
+                <i class="fa-solid fa-basketball social-icon"></i>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div> 
 </section>
 
 
 
 
-<section>
-    <nav  class="flex">
-        <div>
-            <a class="navbar-1 navbar">HOME</a>
-            <a class="navbar-2 navbar">ABOUT</a>
-            <a class="navbar-2 navbar">SERVICES</a>
-            <a class="navbar-2 navbar">PROJECT</a>
-            <a class="navbar-2 navbar">BLOG</a>
-            <a class="navbar-2 navbar">CONTRACT</a><br>
+<section >
+    <div class="navbar">
+    <div class="navbar-content">
+        <div class="navbar-info">
+            <div >
+                <p class="navbar-item active">Home</p>
+            </div>
+            <div>
+                <p class="navbar-item">About</p>
+            </div>
+            <div>
+                <p class="navbar-item">Services</p>
+            </div>
+            <div>
+                <p class="navbar-item">Project</p>
+            </div>
+            <div>
+                <p class="navbar-item">Blog</p>
+            </div>
+            <div>
+                <p  class="navbar-item">Contact</p>
+            </div>
+            </div>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Search">
-            <i class="fas fa-search"></i>
-        </div>
-    </nav>
-    
-</section>
-
-
-
-<img src="i_n.jpg" class="image-1" alt="image is not found">
-
-
-
-
-
-<section>
-    <p class="content-first"><b>We offer Services</b></p>
-    <p class="content-two"><b>Our car services</b></p>
-    <div class="grid-container-2"> 
-        <div>
-            <p class="grid-content-one"><b>Oil change</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
-        </div>
-        <div>
-            <p class="grid-content-one"><b>Batteries</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
-        </div>
-        <div>
-            <p class="grid-content-one"><b>Tow Truck</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
-        </div>
-        <div>
-            <p class="grid-content-first"><b>Tire Change</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
-        </div>
-        <div>
-            <p class="grid-content-first"><b>Engine Repair</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
-        </div>
-        <div>
-            <p class="grid-content-first"><b>Car Maintenance</b></p>
-            <p class="grid-content-two">Even the all-powerful Pointing has no<br>control about the blind texts it is an<br>almost unorthographic.</p>
-            <p class="grid-button">Read more</p>
+        <input type="text" class="search-input" placeholder="Search">
+        <button class="search-button"><i class="fa fa-search "></i></button>
         </div>
     </div>
 </section>
@@ -93,109 +101,23 @@
 
 
 
-<section>
-    <div class="grid-container-3">
-        <div>
-            <img src="J7.png" class="image-2" alt="image is not found">
-        </div>
-        <div class="grid-content-three">
-            <p class="content-10">Welcome to Autorepair</p> 
-            <p class="content-11"><b>We help more than 45 years serving <br> customer car</b></p>
-            <div>
-                <p class="content-12">
-                    Far far away, behind the word mountains, far from the countries Vokalia <br>
-                    <span class="content-12">and Consonantia, there live the blind texts. Separated they live in</span> <br>
-                    <span class="content-12">Bookmarksgrove right at the coast of the Semantics, a large language</span> <br> 
-                    <span class="content-12">ocean. A small river named Duden flows by their place and supplies it <br>
-                    <span class="content-12"> with the necessary regelialia. It is a paradisematic country,</span> <br>
-                    <span class="content-12">in which roasted parts of sentences fly into your mouth.</span>
-                </p>
-            </div>
-            <div>
-                <button class="grid-button-1">Our Mission</button>
-                <button class="grid-button-2">Our Vision </button>
-                <button class="grid-button-2">Our Value</button>
-            </div> <br>
-            <div >
-                <p class="content-13">
-                    Far far away, behind the word mountains, far from the countries<br>
-                    <span class="content-13">Vokalia and Consonantia, there live the blind texts. Separated they</span><br>
-                    <span class="content-13">live in Bookmarksgrove right at the coast of the Semantics, a large</span> <br>
-                    <span class="content-13">language ocean.</span>
-                </p>
-            </div>
-        </div>
-    </div>
+
+<section class="co-section">
+    <div class="slider"></div>
 </section>
 
 
 
-<section>
-    <div class="flex-conteiner">
+<section class="section-4">
+    <div class="section-4-div-1">
+        <div><i class="fas fa-screwdriver-wrench flaticon-repair"></i></div>
         <div>
-            <p class="flex-content-1">45</p>
-            <p class="flex-content-2">Years of Experienced</p>
-        </div>
-        <div>
-            <p class="flex-content-1">8,500</p>
-            <p class="flex-content-2">Project completed</p>
-        </div>
-        <div>
-            <p class="flex-content-1">2,342</p>
-            <p class="flex-content-2">Happy Customers</p>
-        </div>
-        <div>
-            <p class="flex-content-1">30</p>
-            <p class="flex-content-2">Award Winning</p>
-        </div>
+            <p class="content">Are you ready? <span class="box-content-11">Let's repair it now!</span></p>
+        </div>    
+    </div>
+    <div class="content-1">
+        <p class="content-2">Book an apoinment</p>
     </div>
 </section>
-
-
-
-
-<section>
-    <div class="grid-container-5">
-        <div>
-            <img src="Screenshot 2025-03-05 200806.png" class="image-3" alt="Image is not Found">
-        </div>
-        <div class="grid-container-9">
-            <p class="grid-content-seven">Booking an Appointment</p>
-            <p class="grid-content-eight">Free Consultation</p>
-            <div>
-            <select id="dropdown" class="dropdown" name="dropdown" required>
-                <option value="">Select Services</option>
-                <option value="option1">Change Oil</option>
-                <option value="option2">Engine Repair</option>
-                <option value="option3">Baterry Replace</option>
-                <option value="option3">Change Tire</option>
-                <option value="option3">Tow Track</option>
-            </select>
-            </div>
-                <div class="flex-content-6">
-                    <input type="name" id="name" name="name" placeholder="Your name" class="flex-content-7">
-                    <input type="name" id="name" name="name" placeholder="Vechile number" class="flex-content-7">
-                </div>
-                <div class="flex-content-6">
-                    <input type="date" id="date" name="date" placeholder="Date" class="flex-content-7">
-                    <input type="time" id="time" name="time" placeholder="Time" class="flex-content-18">
-                </div>
-            <textarea id="textarea" name="textarea" rows="6" columns="2" class="text-area">Message</textarea>
-            <button class="button-5">Send Massage</button>
-        </div>
-    </div>
-</section>
-   <!-- <div class="top-bar">
-        <div class="info">
-            <span><i class="fas fa-map-marker-alt"></i> 721 New York, NY 10016</span>
-            <span><i class="fas fa-phone"></i> (+01) 123 456 7890</span>
-        </div>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fas fa-cog"></i></a>
-        </div>
-    </div>  -->
 </body>
 </html>
